force-app/main/default/objects/WebServiceSettings__c/WebServiceSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>settings needed for different web service callouts</description>
    <label>WebService Settings</label>
</CustomObject>