force-app/main/default/objects/WebServiceSettings__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <description>may be generated within SFDC, shared with our server for callouts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Certificate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>