force-app/main/default/objects/WebServiceSettings__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>