force-app/main/default/objects/WebServiceSettings__c/fields/MsgBody__c.field-meta.xml
<CustomField>
    <fullName>MsgBody__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The body of the message if needed.</inlineHelpText>
    <label>Msg Body</label>
    <length>30</length>
    <type>Text</type>
</CustomField>