force-app/main/default/objects/WebServiceSettings__c/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we using a named credential? If so, use the value in the comment field instead of URL</inlineHelpText>
    <label>Named Credential?</label>
    <type>Checkbox</type>
</CustomField>