force-app/main/default/objects/WebServiceSettings__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Timeout</label>
    <length>10</length>
    <type>Text</type>
</CustomField>